--- a/SupportToolkit/SupportToolkit/SupportToolkit.csproj
+++ b/SupportToolkit/SupportToolkit/SupportToolkit.csproj
@@ -84,6 +84,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZerosOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ZerosOptions.Designer.cs">
+      <DependentUpon>ZerosOptions.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CCS Splitter.resx">
       <DependentUpon>CCS Splitter.cs</DependentUpon>
     </EmbeddedResource>
@@ -105,6 +111,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ZerosOptions.resx">
+      <DependentUpon>ZerosOptions.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
